k8s-configs/privilegedPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: myapp
spec:
  hostPID: true
  containers:
  - name: myapp-container
    image: busybox
    command: ['sh', '-c', 'echo Hello Kubernetes! && sleep 3600']
    resources:
      # limits:
        # cpu: 100
        # memory: 100
    securityContext:
      privileged: true
      capabilities:
        drop:
          - all
#         add:
#           - CAP_SYS_ADMIN
  volumes:
    - name: dockersock
      hostPath:
        path: /var/run/docker.sock
